# cmakeprojecttemplate

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  deleteme.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
